--- a/common/base.adoc
+++ b/common/base.adoc
@@ -4,7 +4,7 @@
 
 // meta
 :Revision: 1.5
-:docdatetime: 2020-10-07
+:docdatetime: ©SAMPLE 2030-2040
 :copyright: aki-nasu 2030-2040
 :docinfo: shared
 
